<resources>
    <string name="app_name">Waste No More</string>
    <string name="action_settings">Settings</string>
    <string name="trash">Trash</string>
    <string name="water">Water</string>
    <string name="gas">Gasoline</string>
    <string name="why">Why Waste Less?</string>
    <string name="check_in">Check In</string>
    <string name="past_usage"> Past Usage</string>
    <string name="stats"> Your Stats</string>
    <string name="tips"> Tips</string>
    <string name="facts"> Facts</string>
    <string name="fact_source">Fact Source</string>
    <string name="fuel_check_in">Fuel Up Check-In</string>
    <string name="saved_gas_check_in">Saved Gas Check-In</string>
    <string name="fuel_track">Fuel-Ups</string>
    <string name="saved_gas_track">Saved Gas</string>
    <string name="how_many_bags_of_trash">How many bags of trash have you gone through?</string>
    <string name="since_last_check_in">(This week or since your last check-in)</string>
    <string name="small_bags">small bags (8 gal)</string>
    <string name="med_bags">medium bags (13 gal)</string>
    <string name="large_bags">large bags (30 gal)</string>
    <string name="check_odometer">Check your odometer. How many miles did you drive on this tank of gas?</string>
    <string name="gallons_bought">How many gallons of gas did you fill up with? </string>
    <string name="reset_odometer">Don\'t forget to reset your odometer!</string>
    <string name="miles">miles</string>
    <string name="gallons">gallons</string>
    <string name="money_sign">$</string>
    <string name="celebrate">Celebrate when you choose to save gas! \n\n Whether you save a trip in the
        car by walking, biking, carpooling, or not going at all, keep track of it here.</string>
    <string name="trip_length">Distance of saved trip: </string>
    <string name="how_many_shower_min">How many minutes did you spend in the shower today?</string>
    <string name="may_be_more">We tend to think we shower shorter than we do. Be honest with this amount of time.</string>
    <string name="how_many_baths">How many baths did you take today?</string>
    <string name="how_many_laundry">How many loads of laundry did you do today?</string>
    <string name="hand_dish_washing_question">How long did you spend hand-washing dishes today?</string>
    <string name="dishwasher_question">How many times did you run the dishwasher today?</string>
    <string name="face_washing_question">How long did you spend washing your face today?</string>
    <string name="with_water_running">(With the water running)</string>
    <string name="teeth_brushing_question">How long did you have the water running while you brushed your teeth today?</string>
    <string name="other_running_water_question">Are there other times you used running water that haven\'t been accounted for? Add that time here.</string>
    <string name="other_running_water_examples">(Washing hands, cleaning things, rinsing things, cooking, drinking&#8230;)</string>
    <string name="restroom_question">Do you have a water-conserving toilet?</string>
    <string name="toilet_explanation">It would be labeled WaterSense.</string>
    <string name="minutes">minutes</string>
    <string name="baths">baths</string>
    <string name="times">times</string>
    <string name="loads">loads</string>
    <string name="zero">0</string>
    <string name="week_results_small_text">It\'ll be added to your total for this week. Look at your past usage to see if you\'re improving!</string>
    <string name="day_results_small_text">It\'ll be added to your total for today. Look at your past usage to see if you\'re improving!</string>
    <string name="trash_quote">Trash doesn\'t just disappear. It goes into landfills.</string>
    <string name="back_home">Home</string>
    <string name="learn_a_fact">Learn a Fact</string>
    <string name="choose_water_type">Choose what to check in for</string>
    <string name="cap_showers">SHOWERS/BATHS</string>
    <string name="cap_restroom">RESTROOM</string>
    <string name="cap_laundry">LAUNDRY</string>
    <string name="cap_dish_washing">DISH WASHING</string>
    <string name="cap_personal_care">PERSONAL CARE</string>
    <string name="trash_fact_1">The average person generates over 4 pounds of trash every day and
        about 1.5 tons of solid waste per year.</string>
    <string name="trash_fact_1_source">Environmental Protection Agency. "Municipal Solid Waste."
        EPA. Accessed March 28, 2014.</string>
    <string name="trash_fact_2">Americans make more than 200 million tons of garbage each year,
        enough to fill Busch Stadium from top to bottom twice a day. (Busch Stadium is home of the
        MLB St. Louis Cardinals. The stadium has a seating capacity of 43,975.)</string>
    <string name="trash_fact_2_source">Environmental Protection Agency. "10 FAST FACTS ON RECYCLING."
        EPA. http://www.epa.gov/reg3wcmd/solidwasterecyclingfacts.htm. Accessed July 13, 2014.</string>
    <string name="trash_fact_3">Over 75\%% of waste is recyclable, but we only recycle about 30\%% of it.</string>
    <string name="trash_fact_3_source">Green Waste. "A Brighter Shade of Green." Recycling Stats.
        Accessed March 28, 2014.</string>
    <string name="trash_fact_4">We generate 21.5 million tons of food waste each year. If we
        composted that food, it would reduce the same amount of greenhouse gas as taking 2 million
        cars off the road.</string>
    <string name="trash_fact_4_source">Green Waste. "A Brighter Shade of Green." Recycling Stats.
        Accessed March 28, 2014.</string>
    <string name="trash_fact_5">Recycling one aluminum can saves enough energy to listen to a
        full album on your iPod. Recycling 100 cans could light your bedroom for two whole weeks.</string>
    <string name="trash_fact_5_source">SustainAbility. "Recycling Facts." Sustainability-Recycling.
        Accessed March 28, 2014.</string>
    <string name="trash_fact_6">Recycling aluminum cans saves 95\%% of the energy used to make
        aluminum cans from new material.</string>
    <string name="trash_fact_6_source">Earth911, Inc.. "Facts About Aluminum Recycling."
        Earth911.com. Accessed March 28, 2014.</string>
    <string name="trash_fact_7">Americans throw away 25,000,000 plastic bottles every hour.</string>
    <string name="trash_fact_7_source">Green Waste. "A Brighter Shade of Green." Recycling Stats.
        Accessed March 28, 2014.</string>
    <string name="trash_fact_8">If every American recycled just one-tenth of their newspapers,
        we could save about 25 million trees each year.</string>
    <string name="trash_fact_8_source">SustainAbility. "Recycling Facts." Sustainability-Recycling.
        Accessed March 28, 2014.</string>
    <string name="water_fact_1">We drink very little of our drinking water. Generally speaking,
        less than 1\%% of the treated water produced by water utilities is actually consumed. The
        rest goes on lawns, in washing machines, and down toilets and drains.</string>
    <string name="water_fact_1_source">Department Of Water Supply. “55 Facts, Figures, and Follies
        of Water Conservation.” http://www.co.maui.hi.us/DocumentCenter/Home/View/4334.</string>
    <string name="water_fact_2">If everyone in the United States could manage to use just one less
        gallon of water per shower every day, we could save some 85 billion gallons per year.
        How do you do it? By keeping the shower pressure lower or by making your showers a few
        seconds shorter.</string>
    <string name="water_fact_2_source">Department Of Water Supply. “55 Facts, Figures, and Follies
        of Water Conservation.” http://www.co.maui.hi.us/DocumentCenter/Home/View/4334.</string>
    <string name="water_fact_3">If you have a lawn, chances are it\'s your biggest water gobbler.
        Typically, at least 50\%% of water consumed by households is used outdoors. Inside your house,
        bathroom facilities claim nearly 75\%% of the water used.</string>
    <string name="water_fact_3_source">Department Of Water Supply. “55 Facts, Figures, and Follies
        of Water Conservation.” http://www.co.maui.hi.us/DocumentCenter/Home/View/4334.</string>
    <string name="water_fact_4">It takes a considerable amount of energy to deliver and treat the
        water you use every day. For example, letting your faucet run for five minutes uses about as
        much energy as letting a 60-watt light bulb run for 22 hours.</string>
    <string name="water_fact_4_source">United States Environmental Protection Agency. "Why Water Efficiency."
        http://www.epa.gov/watersense/our_water/why_water_efficiency.html.</string>
    <string name="water_fact_5">The WaterSense label will help you identify high-efficiency
        products, homes and programs. These water efficient options provide the same performance and
        quality you\'ve come to expect, but with the added benefit of water savings.</string>
    <string name="water_fact_5_source">United States Environmental Protection Agency. "What You Can Do."
        http://www.epa.gov/watersense/our_water/what_you_can_do.html.</string>
    <string name="water_fact_6">The average family spends $1,100 per year in water costs, but can
        save $350 from retrofitting with WaterSense labeled fixtures and ENERGY STAR&#174; qualified
        appliances.</string>
    <string name="water_fact_6_source">United States Environmental Protection Agency. "Why Water Efficiency."
        http://www.epa.gov/watersense/our_water/why_water_efficiency.html.</string>
    <string name="water_fact_7">Heating water for bathing, shaving, cooking, and cleaning also
        requires a lot of energy. Homes with electric water heaters, for example, spend one-quarter
        of their electric bill just to heat water.</string>
    <string name="water_fact_7_source">United States Environmental Protection Agency. "Why Water Efficiency."
        http://www.epa.gov/watersense/our_water/why_water_efficiency.html.</string>
    <string name="water_fact_8">Average <b>daily</b> U.S. domestic water use (including outdoor) is
        27.4 <b>billion</b> gallons. </string>
    <string name="water_fact_8_source">American Water Works Association. "Water Use Statistics."
        http://www.drinktap.org/home/water-information/conservation/water-use-statistics.aspx.</string>
    <string name="water_tip_1">Which uses more water, a shower or a tub bath? It all depends. A
        partially filled tub uses much less than a long shower, while a short shower is much more
        water efficient than a brimful tub. If you shower in a bathtub, check yourself by plugging
        the tub to see how high the water comes when you\'re finished. Do you use more or less than
        that amount when you take a bath?</string>
    <string name="water_tip_source">Department Of Water Supply. “55 Facts, Figures, and Follies
        of Water Conservation.” http://www.co.maui.hi.us/DocumentCenter/Home/View/4334.</string>
    <string name="water_tip_2">If you like to rinse off vegetables and fruits, stopper the sink
        instead of using running water. Stopper the sink when you wash dishes by hand, too; and
        when you\'re finished, turn on the garbage disposal as you pull the plug.</string>
    <string name="water_tip_3">If everyone
        in the United States could manage to use just one less gallon of water per shower every
        day, we could save some 85 billion gallons per year. How do you do it? By keeping the shower
        pressure lower or by making your showers a few seconds shorter.</string>
    <string name="title_activity_trash_results">Trash Check-In Results</string>
</resources>