<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context="com.cookie_computing.wastenomore.Water.ActivityWaterHome"
    android:weightSum="4.6">

    <Button
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:text="@string/check_in"
        android:textSize="25dp"
        android:id="@+id/button3"
        android:onClick="goToWaterCheckIn"
        android:layout_weight="1"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:text="@string/past_usage"
        android:textSize="25dp"
        android:id="@+id/button4"
        android:onClick="goToWaterTrack"
        android:layout_weight="1"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:text="@string/tips"
        android:textSize="25dp"
        android:id="@+id/button6"
        android:onClick="goToTips"
        android:layout_weight="1.3"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:text="@string/facts"
        android:textSize="25dp"
        android:id="@+id/button5"
        android:onClick="goToWaterFact"
        android:layout_weight="1.3"/>

</LinearLayout>
