<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cookie_computing.wastenomore.ResultsFragment">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:gravity="center"
            android:textColor="@color/light_green"
            android:id="@+id/usageResults"
            android:text="@string/title_activity_trash_results"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/week_results_small_text"
            android:id="@+id/addedToWeekOrDayNote"
            android:layout_below="@+id/usageResults"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/learn_a_fact"
            android:id="@+id/factButton"
            android:onClick="goToFact"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/addedToWeekOrDayNote"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/past_usage"
            android:id="@+id/usageButton"
            android:onClick="goToTrack"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/factButton"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

</FrameLayout>
